--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "mocha echo \"Error: no test specified\" && exit 1",
     "clean": "rm -rf platforms plugins node_modules",
     "preload": "scripts/preload.js",
+    "treeload": "scripts/treeload.js",
     "start": "gulp"
   },
   "repository": {
@@ -46,6 +47,8 @@
     "gulp-watch": "^4.3.5",
     "http-server": "^0.8.0",
     "shelljs": "^0.4.0",
-    "unirest": "^0.4.2"
+    "unirest": "^0.4.2",
+    "url-join": "0.0.1",
+    "winston": "^2.1.1"
   }
 }
